--- a/app/src/main/res/layout/preauthfailed.xml
+++ b/app/src/main/res/layout/preauthfailed.xml
@@ -52,11 +52,13 @@
             <androidx.cardview.widget.CardView
                 android:id="@+id/cvAddBank"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_50sdp"
+                android:layout_height="@dimen/_43sdp"
                 android:layout_alignParentBottom="true"
+                android:layout_marginLeft="@dimen/_8sdp"
+                android:layout_marginRight="@dimen/_8sdp"
                 android:gravity="center"
                 app:cardBackgroundColor="@color/primary_green"
-                app:cardCornerRadius="@dimen/_20sdp">
+                app:cardCornerRadius="@dimen/_22sdp">
 
                 <TextView
                     android:layout_width="match_parent"
