--- a/app/src/main/res/layout/activity_addpayment_method.xml
+++ b/app/src/main/res/layout/activity_addpayment_method.xml
@@ -84,7 +84,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_marginRight="@dimen/_12sdp"
-                    android:src="@drawable/ic__01_bank" />
+                    android:src="@drawable/ic_bank_account_active" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -168,7 +168,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_marginRight="@dimen/_12sdp"
-                    android:src="@drawable/ic_credit_card" />
+                    android:src="@drawable/ic_credit_debit_card" />
 
                 <LinearLayout
                     android:id="@+id/layoutDDetails"
@@ -252,7 +252,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_marginRight="@dimen/_10sdp"
-                    android:src="@drawable/ic_credit_card" />
+                    android:src="@drawable/ic_credit_debit_card" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
