--- a/app/src/main/res/layout/states_bottom_dialog.xml
+++ b/app/src/main/res/layout/states_bottom_dialog.xml
@@ -51,7 +51,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
-            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
+            android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
             android:focusable="true"
             android:fontFamily="@font/opensans_semibold"
             android:hint="States Name"
