--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -532,29 +532,38 @@
                                 android:orientation="horizontal">
 
                                 <TextView
-                                    android:layout_width="wrap_content"
+                                    android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
+                                    android:layout_weight="1"
                                     android:fontFamily="@font/opensans_semibold"
                                     android:text="Account Status:"
                                     android:textColor="@color/primary_black"
                                     android:textSize="@dimen/_12ssp" />
 
-                                <TextView
-                                    android:layout_width="wrap_content"
+                                <LinearLayout
+                                    android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginStart="5dp"
-                                    android:fontFamily="@font/opensans_semibold"
-                                    android:text=" Under Review"
-                                    android:textColor="@color/under_review_blue"
-                                    android:textSize="@dimen/_11ssp" />
+                                    android:orientation="horizontal"
+                                    android:layout_weight="1">
 
-                                <androidx.cardview.widget.CardView
-                                    android:layout_width="@dimen/_8sdp"
-                                    android:layout_height="@dimen/_8sdp"
-                                    android:layout_marginStart="@dimen/_5sdp"
-                                    android:layout_marginTop="@dimen/_2sdp"
-                                    app:cardBackgroundColor="@color/under_review_blue"
-                                    app:cardCornerRadius="@dimen/_4sdp" />
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:layout_marginStart="5dp"
+                                        android:fontFamily="@font/opensans_semibold"
+                                        android:text=" Under Review"
+                                        android:textColor="@color/under_review_blue"
+                                        android:textSize="@dimen/_11ssp" />
+
+                                    <androidx.cardview.widget.CardView
+                                        android:layout_width="@dimen/_8sdp"
+                                        android:layout_height="@dimen/_8sdp"
+                                        android:layout_marginStart="@dimen/_5sdp"
+                                        android:layout_marginTop="@dimen/_2sdp"
+                                        app:cardBackgroundColor="@color/under_review_blue"
+                                        app:cardCornerRadius="@dimen/_4sdp" />
+                                </LinearLayout>
+
                             </LinearLayout>
 
 
@@ -571,7 +580,7 @@
                         </LinearLayout>
 
                         <ImageView
-                            android:layout_width="@dimen/_80sdp"
+                            android:layout_width="@dimen/_75sdp"
                             android:layout_height="@dimen/_90sdp"
                             android:layout_gravity="center"
                             android:layout_marginStart="@dimen/_11sdp"
