Transaction details and Bug Fixes

--- a/app/src/main/res/layout/activity_addpayment_method.xml
+++ b/app/src/main/res/layout/activity_addpayment_method.xml
@@ -210,7 +210,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/opensans_regular"
-                        android:text="Visa or Mastercard debit cards"
+                        android:text="Visa or MasterCard debit cards"
                         android:textColor="@color/dark_grey"
                         android:textSize="@dimen/_9sdp" />
 
