--- a/app/src/main/res/layout/activity_addcard.xml
+++ b/app/src/main/res/layout/activity_addcard.xml
@@ -102,7 +102,7 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/tvCardMsg"
                     android:layout_marginTop="@dimen/_20sdp"
-                    android:hint="Name on card"
+                    android:hint="Name on Card"
                     android:textColorHint="@color/primary_black"
                     app:boxStrokeColor="@color/primary_green"
                     app:errorIconDrawable="@null"
@@ -581,6 +581,7 @@
                             android:id="@+id/etState"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:cursorVisible="false"
                             android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                             android:editable="false"
                             android:focusable="false"
@@ -588,6 +589,7 @@
                             android:hint="CA"
                             android:imeOptions="actionNext"
                             android:inputType="text|textNoSuggestions"
+                            android:longClickable="false"
                             android:maxLength="30"
                             android:maxLines="1"
                             android:padding="@dimen/_14sdp"
