--- a/app/src/main/res/layout/activity_first_tym_fail.xml
+++ b/app/src/main/res/layout/activity_first_tym_fail.xml
@@ -52,6 +52,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:fontFamily="@font/opensans_bold"
             android:text="Try Again"
             android:textColor="@color/white"
             android:textSize="@dimen/_12ssp" />
