--- a/app/src/main/res/layout/activity_leran_more.xml
+++ b/app/src/main/res/layout/activity_leran_more.xml
@@ -10,7 +10,6 @@
         android:layout_width="@dimen/_43sdp"
         android:layout_height="@dimen/_2sdp"
         android:layout_gravity="center"
-        android:layout_marginTop="@dimen/_13sdp"
         android:layout_marginBottom="@dimen/_23sdp"
         android:background="@color/primary_green" />
 
@@ -51,7 +50,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/opensans_bold"
-                android:text="Bank Accounts:"
+                android:text="Bank Accounts: "
                 android:textColor="@color/primary_black"
                 android:textSize="@dimen/_12ssp" />
 
@@ -100,7 +99,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/_20sdp"
             android:fontFamily="@font/opensans_regular"
-            android:text="Pay bank account uses your debit card to \nfacilitate the process. This typically takes about \n30 seconds to process, but can take up to 30 \nminutes depending on your bank. Most, but not \nall banks support Instant Pay"
+            android:text="Pay bank account uses your debit card to \nfacilitate the process. This typically takes about \n30 seconds to process, but can take up to 30 \nminutes depending on your bank. Most, but not \nall banks support Instant Pay."
             android:textColor="@color/primary_black"
             android:textSize="@dimen/_11ssp" />
 
