--- a/app/src/main/res/layout/activity_transaction_failed.xml
+++ b/app/src/main/res/layout/activity_transaction_failed.xml
@@ -9,70 +9,68 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
+        android:layout_height="wrap_content">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:orientation="vertical">
 
-        <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_failed"
-        android:layout_marginTop="@dimen/_102sdp"
-        android:layout_marginBottom="@dimen/_35sdp"
-            android:layout_gravity="center"
-        />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Transaction Failed"
-        android:gravity="center"
-        android:textColor="@color/black"
-        android:fontFamily="@font/opensans_semibold"
-        android:textSize="@dimen/_16ssp"
-        android:layout_marginBottom="@dimen/_21sdp"
-        />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/_12ssp"
-        android:textColor="@color/primary_black"
-        android:fontFamily="@font/opensans_regular"
-        android:text="The transaction failed due to error \ncode: {error code - error code \ndescription}. Please try again."
-        android:gravity="center"
-        />
-        </LinearLayout>
-
-            <LinearLayout
+            <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:orientation="vertical">
+                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/_102sdp"
+                android:layout_marginBottom="@dimen/_35sdp"
+                android:src="@drawable/ic_failed" />
 
-            <androidx.cardview.widget.CardView
-        android:id="@+id/nextCV"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        app:cardBackgroundColor="@color/primary_green"
-        android:gravity="center"
-        app:cardCornerRadius="20dp"
-        android:layout_marginTop="@dimen/_189sdp"
-        >
-        <TextView
-            android:id="@+id/home"
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/_21sdp"
+                android:fontFamily="@font/opensans_semibold"
+                android:gravity="center"
+                android:text="Transaction Failed"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_16ssp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/opensans_regular"
+                android:gravity="center"
+                android:text="The transaction failed due to error \ncode: {error code - error code \ndescription}. Please try again."
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/_12ssp" />
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Try Again"
-            android:textColor="@color/white"
-            android:gravity="center"
-            android:fontFamily="@font/opensans_bold"
-            android:layout_gravity="center"
-            />
-    </androidx.cardview.widget.CardView>
-            </LinearLayout>
+            android:layout_alignParentBottom="true"
+            android:orientation="vertical">
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/nextCV"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="@dimen/_189sdp"
+                android:gravity="center"
+                app:cardBackgroundColor="@color/primary_green"
+                app:cardCornerRadius="20dp">
+
+                <TextView
+                    android:id="@+id/home"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:fontFamily="@font/opensans_bold"
+                    android:gravity="center"
+                    android:text="Try Again"
+                    android:textColor="@color/white" />
+            </androidx.cardview.widget.CardView>
+        </LinearLayout>
     </RelativeLayout>
 
 </LinearLayout>
