--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -145,4 +145,11 @@
     <style name="prefix" parent="TextAppearance.AppCompat.Body1">
         <item name="android:textSize">@dimen/_14ssp</item>
     </style>
+    <style name="Calender" parent="Theme.MaterialComponents.Light.DarkActionBar">
+    <!-- Customize your theme here. -->
+    <item name="colorPrimary">@color/colorPrimary</item>
+    <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+    <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
 </resources>
