--- a/app/src/main/res/layout/activity_filters.xml
+++ b/app/src/main/res/layout/activity_filters.xml
@@ -10,7 +10,7 @@
     android:paddingStart="@dimen/_20sdp"
     android:paddingEnd="@dimen/_20sdp"
     android:paddingBottom="@dimen/_20sdp"
-    android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"
+    android:theme="@style/Theme.Coyni"
     >
 
     <View
@@ -696,13 +696,14 @@
             app:cardCornerRadius="@dimen/_20sdp">
 
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:fontFamily="@font/opensans_bold"
                 android:textSize="@dimen/_12ssp"
                 android:text="Apply Filter"
+                android:background="@color/primary_green"
                 android:textColor="@color/white" />
         </androidx.cardview.widget.CardView>
 
