--- a/app/src/main/res/layout/activity_transaction_list.xml
+++ b/app/src/main/res/layout/activity_transaction_list.xml
@@ -95,14 +95,16 @@
             </LinearLayout>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
-
-
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/refreshLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
     <androidx.core.widget.NestedScrollView
         android:id="@+id/nestedSV"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         >
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -119,9 +121,8 @@
                 android:layout_marginStart="@dimen/_21sdp"
                 android:text="Pending"
                 android:textColor="@color/primary_black"
-                android:textSize="@dimen/text_size_14sp"
+                android:textSize="@dimen/_12sdp"
                 android:visibility="gone" />
-
 
             <LinearLayout
                 android:id="@+id/layoutLLPending"
@@ -202,6 +203,7 @@
                 android:layout_height="match_parent"
                 android:fontFamily="@font/opensans_regular"
                 android:gravity="center"
+                android:layout_marginTop="@dimen/_12sdp"
                 android:text="You have no more transactions"
                 android:textColor="@color/dark_grey"
                 android:textSize="@dimen/_10ssp"
@@ -210,6 +212,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_30sdp"/>
         </LinearLayout>
+
     </androidx.core.widget.NestedScrollView>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </LinearLayout>
