--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -48,4 +48,9 @@
     <color name="teal_700_trans">#22018786</color>
     <color name="slidebtn_bg">#DFF4F3</color>
 
+    <color name="status">#35BAB6</color>
+
+    <color name="colorPrimary">#6200EE</color>
+    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorAccent">#03DAC5</color>
 </resources>
