--- a/app/src/main/res/layout/activity_filters.xml
+++ b/app/src/main/res/layout/activity_filters.xml
@@ -707,13 +707,14 @@
             app:cardCornerRadius="@dimen/_20sdp">
 
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:fontFamily="@font/opensans_bold"
                 android:gravity="center"
                 android:text="Apply Filter"
                 android:textColor="@color/white"
+                android:background="@color/primary_green"
                 android:textSize="@dimen/_12ssp" />
         </androidx.cardview.widget.CardView>
 
