--- a/app/src/main/res/layout/activity_transaction_list.xml
+++ b/app/src/main/res/layout/activity_transaction_list.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:background="#f2f4f5"
     android:orientation="vertical"
+    android:theme="@style/Calender"
     tools:context=".view.TransactionListActivity">
 
     <LinearLayout
