--- a/app/src/main/res/layout/activity_filters.xml
+++ b/app/src/main/res/layout/activity_filters.xml
@@ -39,6 +39,7 @@
                 android:textSize="@dimen/_16ssp" />
 
             <TextView
+                android:id="@+id/resetFiltersTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
