--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -394,6 +394,14 @@
 
     </LinearLayout>
 
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/latestTxnRefresh"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/layoutMenu"
+        android:layout_below="@+id/cvHeader"
+        android:layout_marginStart="@dimen/_10sdp"
+        android:layout_marginEnd="@dimen/_10sdp">
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/transactionsNSV"
@@ -543,8 +551,8 @@
                                 <LinearLayout
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:orientation="horizontal"
-                                    android:layout_weight="1">
+                                    android:layout_weight="1"
+                                    android:orientation="horizontal">
 
                                     <TextView
                                         android:layout_width="wrap_content"
@@ -780,6 +788,7 @@
                     android:textColor="@color/primary_green"
                     android:textSize="@dimen/_12ssp" />
 
+
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -804,11 +813,13 @@
                             android:layout_height="match_parent"
                             android:orientation="vertical">
 
-                            <androidx.recyclerview.widget.RecyclerView
-                                android:id="@+id/txnRV"
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:visibility="visible" />
+
+
+                                <androidx.recyclerview.widget.RecyclerView
+                                    android:id="@+id/txnRV"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:visibility="visible" />
 
                             <TextView
                                 android:id="@+id/noTxnTV"
@@ -862,6 +873,8 @@
         </RelativeLayout>
 
     </androidx.core.widget.NestedScrollView>
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 
     <androidx.cardview.widget.CardView
