--- a/app/src/main/res/layout/activity_identity_verification.xml
+++ b/app/src/main/res/layout/activity_identity_verification.xml
@@ -653,7 +653,7 @@
                         android:imeOptions="actionDone"
                         android:importantForAutofill="no"
                         android:inputType="number|textNoSuggestions"
-                        android:maxLength="7"
+                        android:maxLength="5"
                         android:maxLines="1"
                         android:padding="@dimen/_14sdp"
                         android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
@@ -698,7 +698,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20sp"
                     android:hint="@string/country"
-                    android:textColorHint="@color/black"
+                    android:textColorHint="@color/light_gray"
                     app:boxBackgroundColor="@color/boxbackgroundgray"
                     app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                     app:boxCornerRadiusBottomStart="@dimen/_10sdp"
@@ -720,7 +720,7 @@
                         android:hint="@string/countryhint"
                         android:imeOptions="actionDone"
                         android:padding="@dimen/_12sdp"
-                        android:textColor="@color/black"
+                        android:textColor="@color/light_gray"
                         android:textColorHint="@color/light_gray"
                         android:textSize="@dimen/_12sdp" />
 
